applications/arr-stack/base/posterizarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: posterizarr
  labels:
    app: posterizarr
    app.kubernetes.io/name: posterizarr
    app.kubernetes.io/part-of: arr-stack
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: posterizarr
